{
    "version": 1,
    "name": "Player Input",
    "maps": [
        {
            "name": "playerInput",
            "id": "b62aa591-1a1d-4382-bf8f-b461c55618cd",
            "actions": [
                {
                    "name": "PlayerMovement",
                    "type": "PassThrough",
                    "id": "f8ec1067-798b-4f34-b7ed-c43f316a3622",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerCrouch",
                    "type": "Button",
                    "id": "d3e99e2b-310f-45d9-8f98-6b65998eb00f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "92fcd77b-3db9-4a05-85fa-93e817399529",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c71f2599-e190-4e0f-8e8e-dc8d8253032b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "832f75a5-2735-49d7-86d0-07ba9bd3574b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d4039cf5-275a-447c-a2ae-a6686cb3bb3e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "40afdb7e-d612-4ec3-830d-ec96fe16b06a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "73c6cf7c-6d2b-4ed9-a9a0-9b24542e1fec",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerCrouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}